cambio en fly.yml

--- a/frontend/src/.github/workflows/fly.yml
+++ b/frontend/src/.github/workflows/fly.yml
@@ -18,4 +18,4 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: Deploy application
-        run: flyctl deploy --remote-only
+        run: flyctl deploy 
