--- a/.github/workflows/Fly.yml
+++ b/.github/workflows/Fly.yml
@@ -3,7 +3,7 @@ name: Deploy to Fly.io
 on:
   push:
     branches:
-      - main
+      - main  # Despliega automáticamente al hacer push a main
 
 jobs:
   deploy:
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Descarga el código fuente del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
-
-      - name: Deploy application
-        env: # Aquí usamos el token desde los secrets
+      # 2. Despliega la aplicación en Fly.io
+      - name: Deploy to Fly.io
+        uses: superfly/flyctl-actions@master
+        env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl deploy -a pumahackernews
+        with:
+          app: pumahackernews
