--- a/.github/workflows/Fly.yml
+++ b/.github/workflows/Fly.yml
@@ -15,10 +15,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Despliega la aplicación en Fly.io
+      # 2. Configura Node.js (para construir la app React)
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # 3. Instala las dependencias
+      - name: Install dependencies
+        run: npm install
+
+      # 4. Genera los archivos estáticos
+      - name: Build static files
+        run: npm run build
+
+      # 5. Despliega la aplicación en Fly.io
       - name: Deploy to Fly.io
         uses: superfly/flyctl-actions@master
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        with:
-          app: pumahackernews
+        run: flyctl deploy
