--- a/.github/workflows/Fly.yml
+++ b/.github/workflows/Fly.yml
@@ -29,8 +29,15 @@ jobs:
       - name: Build static files
         run: npm run build
 
-      # 5. Despliega la aplicación en Fly.io
+      # 5. Instala Flyctl
+      - name: Install Flyctl
+        run: |
+          curl -L https://fly.io/install.sh | sh
+          export PATH=$HOME/.fly/bin:$PATH
+
+      # 6. Despliega la aplicación en Fly.io
       - name: Deploy to Fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl deploy
+        run: flyctl deploy --config ./fly.toml
+
