--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     ]
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.9"
+    "@flydotio/dockerfile": "^0.5.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   }
+
 }
