--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -36,8 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.9",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@flydotio/dockerfile": "^0.5.9"
   }
-
 }
